--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: white;
+      background-color: orange;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon.</h2>
+    <h2>ravi the lover boy</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
