--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>ravi the lover boy</h2>
+    <h2>hi this is aws demo class</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
